--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
+    
     "nodemon": "^2.0.12"
   }
 }
